# es-lab-task1

./: .gitignore  CMakeLists.txt  Doxyfile.awesome-css  README.md  doxygen.config  setup.sh
include/: controller.h  server.h  simulator.h
src/: controller.cpp  main.cpp  server.cpp  simulator.cpp
tests/: CMakeLists.txt  test_controller.cpp  test_pytest_wrapper.py
